# greCy-pypi

./: .project  README.md  pyproject.toml  requirements.txt  setup.py
grecy/: __main1__.py  __main__.py  __version__.py
grecy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
grecy_josesmooth/: .project  __main__.py
