[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grecy"
version = "3.5.2"
description = "This project trains four spaCy models using the ancient Greek Universal Dependency treebanks Proiel and Perseus."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
  { name="Jacobo Myerston", email="jmyerston@ucsd.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Common Public License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/jmyerston/greCy"
"Bug Tracker" = "https://github.com/jmyerston/greCy/issues"
